<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibraryFragment"
    android:background="@color/black">


    <TextView
        android:id="@+id/textView"
        style="@style/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:text="@string/yourLib"
        app:layout_constraintStart_toEndOf="@id/acc"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginStart="20dp"
        android:scaleX="1.6"
        android:scaleY="1.6"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:scaleX="1.6"
        android:scaleY="1.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="55dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintEnd_toStartOf="@+id/suma"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_compare_arrows_24"
        android:layout_marginTop="21dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/titulo3"
        android:layout_marginStart="10dp"
        android:textStyle="normal"
        android:textSize="15sp"
        android:text="@string/recent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_24"
        android:backgroundTint="@color/liked"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="20dp"
        android:scaleX="1.2"
        android:scaleY="1.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/titulo3"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:textSize="18sp"
        android:textStyle="normal"
        android:fontFamily="@font/montserratlight"
        android:text="@string/liked"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratlight"
        android:textColor="@color/inactivo"
        android:layout_marginStart="15dp"
        tools:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>